# intuition

./: .gitignore  .gitmodules  BENCHMARKS_README.md  BENCHMARKS_SUMMARY.md  BENCHMARK_COMPARISON.md  BUILD_TEST_REPORT.md  CHANGELOG.md  CHANGELOG.md.save0  COMPLETE_SOLVER_COMPARISON.md  LETTER_TO_ALEKSY.md  PR_DESCRIPTION_PL.md  SOLIDITY_SMT_TASKS.md  SOLIDITY_VERIFICATION_STRATEGIES_SUMMARY.md  SOLVER_CAPABILITIES_CLARIFICATION.md  VERIFICATION_COMPARISON.md  benchmark_comparison.sh  benchmark_results.txt  benchmark_sat_comprehensive.sh  benchmark_smt.sh  benchmark_timing.sh  cabal.project  cabal.project.freeze  comparative_results.txt  comparison_data.csv  create_branches.sh  fix-001-add-default-language.patch  fix-002-vcgen-add-other-modules.patch  fix-003-vcgen-remove-unused-imports.patch  fix-004-vcgen-add-pattern-signatures.patch  intuition.cabal  sat_bench_output.txt  sat_comp_data.csv  sat_comprehensive_results.txt  smt_data.csv  smt_results.txt  stack.yaml  test_all.sh  test_debug.hs  test_output_depth100.txt  timing_data.csv  (+1 more)
app/: Main.hs
src/: Context.hs  Formulas.hs  Prover.hs
vcgen/: ARITHMETIC_ENCODING_DESIGN.md  ASSERTION_THEORIES.md  CHANGELOG.md  CNF_COMPARISON_RESULTS.md  COMPARATIVE_REPORT.md  FUNCTION_INLINING_RESULTS.md  HOMEGROWN_SMT_DESIGN.md  IMPLEMENTATION_ROADMAP.md  IMPLICATION_BASED_TPTP.md  INTUITION_WP_RESULTS.md  Interpreter.hs  LICENSE  Makefile  PLANNED_THEORIES.md  PRESBURGER_RESULTS.md  PRESBURGER_WP_RESULTS.md  QUANTITATIVE_BENCHMARK_RESULTS.md  REVISED_TIMELINE.md  STRATEGIES_COMPARISON.md  STRATEGY-1-HEVM-README.md  Setup.hs  (+71 more)
(+126 files in other folders)
