cabal-version:      3.0
name:               intuition
version:            0.3.0.1
synopsis:           Intuitionistic logic PicoSAT
homepage:           https://github.com/alx/intuition
license:            NONE
author:             Aleksy Schubert
maintainer:         alx@mimuw.edu.pl
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
--common warnings
--   ghc-options: -Wall

library
    exposed-modules:
      Context
      Formulas
      Prover
    hs-source-dirs: src
    build-depends:    base >=4.11.3.0,
                      tptp,
                      sqlite-simple,
                      attoparsec,
                      containers,
                      text >=1.2.0.0 && <1.5,
                      timeit


executable intuition
    -- import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base >=4.11.3.0,
                      tptp,
                      sqlite-simple,
                      attoparsec,
                      containers,
                      text >=1.2.0.0 && <1.5,
                      timeit,
                      intuition

    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
